cmake_minimum_required(VERSION 3.11)

project(task)
set (CMAKE_CXX_STANDARD 11)

enable_testing()

#------------------------------------------------------------------------------
# Download and unpack googletest at configure time
#------------------------------------------------------------------------------

include(cmake/utils.cmake)
import_gtest()

#------------------------------------------------------------------------------
# Setup include file
#------------------------------------------------------------------------------

include_directories(include)

#------------------------------------------------------------------------------
# Add lib code
#------------------------------------------------------------------------------

# add_subdirectory(lib)

#------------------------------------------------------------------------------
# Add test code
#------------------------------------------------------------------------------

add_subdirectory(test)

#------------------------------------------------------------------------------
# Create Main Execute
#------------------------------------------------------------------------------

add_executable(sample main.cpp)
